--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
   http: ^0.13.6
   flutter_bloc: ^8.1.2
   shared_preferences: ^2.1.0
+  qr_flutter: ^4.0.0
+
+
+
 
 dev_dependencies:
   flutter_test:
