--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   qr_flutter: ^4.0.0
   flutter_downloader: ^1.10.2
   pdf: ^3.6.4
+  image_picker: ^0.8.7+5
+  url_launcher: ^6.1.11
 
 
 
