--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,12 +38,17 @@ dependencies:
   http: ^0.13.6
   flutter_bloc: ^8.1.2
   shared_preferences: ^2.1.0
-  qr_flutter: ^4.0.0
   flutter_downloader: ^1.10.2
   pdf: ^3.6.4
   image_picker: ^0.8.7+5
   url_launcher: ^6.1.11
   intl: ^0.18.1
+  flutter_rating_bar: ^4.0.1
+  dropdown_search: ^5.0.6
+  flutter_typeahead: ^4.6.0
+  qr_flutter:
+    git:
+      url: https://github.com/theyakka/qr.flutter.git
 
 
 
@@ -91,6 +96,9 @@ fonts:
      - family: title
        fonts:
           - asset: fonts/Poppins-Bold.ttf
+     - family: home
+       fonts:
+          - asset: fonts/Roboto-Medium.ttf
   #       - asset: fonts/Schyler-Regular.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
