--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,6 @@ dependencies:
   flutter_bloc: ^8.1.2
   shared_preferences: ^2.1.0
   flutter_downloader: ^1.10.2
-  pdf: ^3.6.4
   image_picker: ^0.8.7+5
   url_launcher: ^6.1.11
   intl: ^0.18.1
@@ -49,6 +48,9 @@ dependencies:
   qr_flutter:
     git:
       url: https://github.com/theyakka/qr.flutter.git
+  pdf: ^3.10.4
+  printing: ^5.11.0
+  fluttertoast: ^8.2.2
 
 
 
